--- a/NF17-SCF/admin/programmation/prog.css
+++ b/NF17-SCF/admin/programmation/prog.css
@@ -9,3 +9,26 @@ input[type='checkbox'] {
 input[type='checkbox']:checked {
     background: #abd;
 }
+
+.arrow {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    margin-right:15px;
+}
+
+.card-header {
+  cursor: pointer;
+}
+
+.card {
+  margin-bottom:20px;
+}
+
+.table {
+  margin-bottom:0px;
+
+}
